--- a/Semester 1/Website/aboutUs.html
+++ b/Semester 1/Website/aboutUs.html
@@ -75,7 +75,7 @@
                         <!---->
                         <!---->
                         <header role="tab" class="card-header p-1">
-                            <a target="_blank" href="/KaPf/index.html">
+                            <a target="_blank" href="./KaPf/index.html">
                                 <button type="button" class="btn faq-button btn-secondary btn-block collapsed" aria-expanded="false" aria-controls="question-0" style="overflow-anchor: none;">
                                     Kaloyan Andreev
 
@@ -88,7 +88,7 @@
                         <!---->
                         <!---->
                         <header role="tab" class="card-header p-1">
-                            <a href="/FmPf/EDO%20Week11.html" target="_blank">
+                            <a href="./FmPf/EDO%20Week11.html" target="_blank">
                                 <button type="button" class="btn faq-button btn-secondary btn-block collapsed" aria-expanded="false" aria-controls="question-1" style="overflow-anchor: none;">
                                     Francisco Marcó
 
@@ -102,7 +102,7 @@
                         <!---->
                         <!---->
                         <header role="tab" class="card-header p-1">
-                            <a target="_blank" href="/SvPf/index.html">
+                            <a target="_blank" href="./SvPf/index.html">
                                 <button type="button" class="btn faq-button btn-secondary btn-block collapsed" aria-expanded="false" aria-controls="question-2" style="overflow-anchor: none;">
     Sava Vasilev
                                 </button>
